# automation-library

Github/: pyproject.toml
Office365Connector/: CHANGELOG.md  README.md  main.py  manifest.json  pyproject.toml
Office365Connector/office365_connector/: configuration.py  connector.py  consumer.py  office365_api.py  producer.py  settings.py  utils.py
Office365Connector/tests/: conftest.py  customer.py  entity.py  intake.py  test_client.py  test_connector.py  test_office365.py  test_office_365.py
Retarus/: pyproject.toml
Retarus/retarus_modules/: connector.py  consumer.py
Retarus/tests/: conftest.py  test_retarus_events_consumer.py  test_retarus_events_forwarder.py
Zscaler/: action_block_ioc.json  main.py
Zscaler/tests/: test_block_ioc.py
Zscaler/zscaler/: block_ioc.py
